--- a/vignettes/blueprint.Rmd
+++ b/vignettes/blueprint.Rmd
@@ -290,7 +290,7 @@ What follows is a demonstration of the types of model outputs that `helios` can 
 
 **The results presented in these figures are illustrative and primarily meant to demonstrate the types of result that the framework can currently produce. They should not be over-interpreted at this early stage, and we note that they will be subject to substantial change following your input, and throughout the model development phase.**
 
-## #1 Exploring the impact of far UVC deployment strategies on disease dynamics with `helios`
+## Exploring the impact of far UVC deployment strategies on disease dynamics with `helios`
 
 To assess the potential of far UVC deployment to mitigate transmission, we carried out a number of simulations for a pathogen with characteristics similar to SARS-CoV-2 (R0 of 2), and explored the impact of far UVC on transmission dynamics. Specifically, we compared the transmission dynamics under a no-intervention baseline, random far UVC deployment, and far UVC deployment targeted at the most populous 50% of places within each setting type.
 
@@ -360,7 +360,7 @@ exemplar_data |>
 
 ```
 
-## #2 Assessing how various far UVC parameters shape epidemic final size
+## Assessing how various far UVC parameters shape epidemic final size
 
 In addition to the outputs presented above (which show the results of a single simulation with a single parameter set), we can also use `helios` framework used to explore how key outputs (the total number of individuals infected) varies with changes to input parameters. This is known as a "sensitivity analysis" and we present illustrative results from an example sensitivity analysis below.
 
@@ -375,7 +375,7 @@ The deployment of far UVC reduced the total percentage/proportion of the populat
 ```{r sweep-R0-coverage, fig.cap="(ref:sweep-R0-coverage)"}
 
 # Plot the epidemic exemplar simulations:
-cowplot::plot_grid(
+a <- cowplot::plot_grid(
   
   # Plot the coverage through time:
   parameter_sweep_data |>
@@ -426,13 +426,7 @@ cowplot::plot_grid(
   
 )
 
-```
-
-(ref:sweep-R0-efficacy) The effect of R0 and far UVC efficacy, under random and targeted far UVC deployment, on the proportion of the population that a pathogen infects when full and lasting immunity is conferred on infected individuals and a far UVC coverage of 80% is achieved.
-
-```{r sweep-R0-efficacy, fig.cap="(ref:sweep-R0-efficacy)"}
-
-cowplot::plot_grid(
+b <- cowplot::plot_grid(
   
   # Plot the coverage through time:
   parameter_sweep_data |>
@@ -483,6 +477,66 @@ cowplot::plot_grid(
   
 )
 
+cowplot::plot_grid(a, b, nrow = 1, labels = c("A", "B"))
+
+
+```
+
+(ref:sweep-R0-efficacy) The effect of R0 and far UVC efficacy, under random and targeted far UVC deployment, on the proportion of the population that a pathogen infects when full and lasting immunity is conferred on infected individuals and a far UVC coverage of 80% is achieved.
+
+```{r sweep-R0-efficacy, fig.cap="(ref:sweep-R0-efficacy)"}
+
+# cowplot::plot_grid(
+#   
+#   # Plot the coverage through time:
+#   parameter_sweep_data |>
+#     filter(coverage > 0.7 & coverage < 1) |>
+#     ggplot(aes(x = 100 * efficacy, y = 100 * final_size, col = factor(R0))) +
+#     geom_line() +
+#     facet_grid(.~Coverage_Strategy) +
+#     theme_bw() +
+#     theme(strip.background = element_rect(fill="white", colour = "black")) +
+#     labs(x = "Efficacy %", y = "Epidemic Final Size", colour = "R0"), 
+#   
+#   # Plot the heatmap of R0 against efficacy for proportion contained:
+#   parameter_sweep_data |>
+#     filter(coverage > 0.7 & coverage < 1) |>
+#     ggplot(aes(y = factor(R0), x = 100 * efficacy, fill = 100 * final_size)) +
+#     geom_tile(colour = "black") +
+#     scale_fill_viridis_c(option = "mako", 
+#                          limits = c(0, 100),
+#                          begin = 0, 
+#                          end = 1, 
+#                          name = "Proportion\nContained",
+#                          direction = -1) +
+#     scale_x_continuous(breaks = c(0, 20, 40, 60, 80, 100),
+#                        labels = c(0, 20, 40, 60, 80, 100)) +
+#     facet_grid(.~Coverage_Strategy) +
+#     labs(y = "R0",
+#          x = "farUVC Efficacy (%)") +
+#     theme(axis.text = element_text(angle = 0),
+#           plot.title = element_text(hjust = 0.5, size = 20, face = "bold"),
+#           legend.title = element_text(size = 12),
+#           legend.text = element_text(size = 12),
+#           legend.position = "right",
+#           strip.background = element_rect(fill="white", colour = "black"),
+#           panel.border = element_rect(linetype = "solid", fill = NA, linewidth = 0.5)) +
+#     coord_cartesian(expand = FALSE),
+#   
+#   # Split the two figures across separate rows:
+#   nrow = 2,
+#   
+#   # Align the figures horizontally 
+#   align = "hv", 
+#   
+#   # Not sure
+#   axis = "lr",
+#   
+#   # Specify the relative heights of the two figures:
+#   rel_heights = c(1, 2)
+#   
+# )
+
 ```
 
 Add some text.
@@ -490,30 +544,30 @@ Add some text.
 (ref:sweep-efficacy-coverage) The effect of far UVC efficacy and coverage, under random and targeted far UVC deployment, on the proportion of the population that a pathogen with an R0 of approximately 2 infects when full and lasting immunity is conferred on infected individuals.
 
 ```{r sweep-efficacy-coverage, fig.cap="(ref:sweep-efficacy-coverage)"}
-
-# Filter the R0 of interest:
-parameter_sweep_data |>
-  filter(R0 == 2) |>
-  ggplot(aes(y = 100 * coverage, x = 100 * efficacy, fill = 100 * final_size)) +
-  geom_tile(colour = "black") +
-  scico::scale_fill_scico(palette = "bamako", limits = c(0, 81)) +
-  scale_x_continuous(breaks = c(0, 20, 40, 60, 80, 100),
-                     labels = c(0, 20, 40, 60, 80, 100)) +
-  scale_y_continuous(breaks = c(0, 20, 40, 60, 80, 100),
-                     labels = c(0, 20, 40, 60, 80, 100)) +
-  facet_grid(.~Coverage_Strategy) +
-  labs(y = "farUVC Coverage (%)",
-       x = "farUVC Efficacy (%)",
-       fill = "Proportion\nContained") +
-  theme(axis.text = element_text(angle = 0),
-        plot.title = element_text(hjust = 0.5, size = 20, face = "bold"),
-        legend.title = element_text(size = 12),
-        legend.text = element_text(size = 12),
-        legend.position = "right",
-        strip.background = element_rect(fill="white", colour = "black"),
-        panel.border = element_rect(linetype = "solid", fill = NA, linewidth = 0.5)) +
-  coord_cartesian(expand = FALSE)
-
+# 
+# # Filter the R0 of interest:
+# parameter_sweep_data |>
+#   filter(R0 == 2) |>
+#   ggplot(aes(y = 100 * coverage, x = 100 * efficacy, fill = 100 * final_size)) +
+#   geom_tile(colour = "black") +
+#   scico::scale_fill_scico(palette = "bamako", limits = c(0, 81)) +
+#   scale_x_continuous(breaks = c(0, 20, 40, 60, 80, 100),
+#                      labels = c(0, 20, 40, 60, 80, 100)) +
+#   scale_y_continuous(breaks = c(0, 20, 40, 60, 80, 100),
+#                      labels = c(0, 20, 40, 60, 80, 100)) +
+#   facet_grid(.~Coverage_Strategy) +
+#   labs(y = "farUVC Coverage (%)",
+#        x = "farUVC Efficacy (%)",
+#        fill = "Proportion\nContained") +
+#   theme(axis.text = element_text(angle = 0),
+#         plot.title = element_text(hjust = 0.5, size = 20, face = "bold"),
+#         legend.title = element_text(size = 12),
+#         legend.text = element_text(size = 12),
+#         legend.position = "right",
+#         strip.background = element_rect(fill="white", colour = "black"),
+#         panel.border = element_rect(linetype = "solid", fill = NA, linewidth = 0.5)) +
+#   coord_cartesian(expand = FALSE)
+# 
 ```
 
 # Bibliography {.unnumbered}
